# epi-cs

./: .gitignore  CMakeLists.txt
include/: JSONParser.hpp
include/ecs/: Component.hpp  EntityCommands.hpp  EntityManager.hpp  System.hpp  World.hpp
include/ecs/engine/: World.hpp
include/raylib/: Animation.hpp  AnimationManager.hpp  Camera.hpp  Font.hpp  FontManager.hpp  GL.hpp  MaterialView.hpp  Matrix.hpp  Model.hpp  ModelManager.hpp  Ray.hpp  Texture.hpp  Vectors.hpp  Window.hpp
include/tests/: 2D.hpp  Camera.hpp  Clickable.hpp  ColorTexture.hpp  DrawableCube.hpp  DrawableModel.hpp  Hitbox.hpp  HoverTint.hpp  Hoverable.hpp  Physics.hpp  TestRessources.hpp  Text3D.hpp
src/: main.cpp
src/ecs/: World.cpp
src/ecs/systems/: DrawCube.cpp  DrawModel.cpp  Text3D.cpp
